k3s/monitoring/unpoller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: unpoller
  name: unpoller
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpoller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: unpoller
    spec:
      containers:
        - image: ghcr.io/unpoller/unpoller:latest
          name: unpoller
          ports:
            - containerPort: 9130
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unpoller
  name: unpoller
  namespace: monitoring
spec:
  ports:
    - name: "9130"
      port: 9130
      targetPort: 9130
  type: ClusterIP
  selector:
    app: unpoller
