k3s/monitoring/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-ingress-http
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.local.io`)
      services:
        - kind: Service
          name: prometheus
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`grafana.local.io`)
      services:
        - kind: Service
          name: grafana
          port: 80
          scheme: http
